name:                amqptap
version:             0.1.0.0
synopsis:            Tiny logger for RabbitMQ, suitable for monitoring the flow of messages.
description:         Please see README.md
homepage:            http://github.com/mboeh/amqptap#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Boeh
maintainer:          m@mboeh.com
copyright:           Copyright (c) 2016 Matthew Boeh
category:            Network, Application, Console
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AMQPTap
  build-depends:       base >= 4.7 && < 5
                     , amqp
  default-language:    Haskell2010

executable amqptap
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -optc-static -optl-static 
  build-depends:       base
                     , text
                     , amqp
                     , bytestring
                     , readline
                     , containers
                     , amqptap
  default-language:    Haskell2010

test-suite amqptap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , amqptap
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mboeh/amqptap
