name:                rmqdriver
version:             0.1.0.0
synopsis:            Command-line clients for RabbitMQ.
description:         Please see README.md
homepage:            http://github.com/mboeh/rmqdriver#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Boeh
maintainer:          m@mboeh.com
copyright:           Copyright (c) 2016 Matthew Boeh
category:            Network, Application, Console
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RMQDriver
  other-modules:       RMQDriver.Types
                     , RMQDriver.Commands
                     , RMQDriver.Sinks
                     , RMQDriver.Engine
                     , RMQDriver.JSON
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , amqp
                     , containers
                     , text
                     , json
                     , unix
                     , random
  default-language:    Haskell2010

executable rmqtail
  hs-source-dirs:      app/rmqtail
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , readline
                     , split
                     , rmqdriver
  default-language:    Haskell2010

executable rmqsh
  hs-source-dirs:      app/rmqsh
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , rmqdriver
  default-language:    Haskell2010

test-suite rmqdriver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rmqdriver
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mboeh/rmqdriver
